feat: attach type to Currency
